<resources>
    <string name="app_name">Expense Tracker</string>
    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Login</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Not a valid password</string>
    <string name="login_failed">"Login failed"</string>
    <string name="submit">"Submit"</string>
    <string name="takePicture">"Take Picture"</string>
    <string name="storeName">"Store Name"</string>
    <string name="transactionCost">"Transaction Cost"</string>
    <string name="transactionDate">"Transaction Date"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>